--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,27 @@
 @charset "UTF-8";
 
-@keyframes bounce{
-	0%, 20%, 60%, 100%{
+@keyframes bounce {
+
+	0%,
+	20%,
+	60%,
+	100% {
 		-webkit-transform: translatey(0);
 		transform: translateY(0);
 	}
-	40%{
+
+	40% {
 		-webkit-transform: translatey(-20px);
 		transform: translateY(-20px);
 	}
-	80%{
+
+	80% {
 		-webkit-transform: translatey(-10px);
 		transform: translateY(-10px);
 	}
-	
+
 }
+
 .fa:before {
 	font-family: FontAwesome !important;
 }
@@ -57,7 +64,8 @@
 }
 
 #rodape {
-	margin-top: 10px;
+	margin-top: 5%;
+	margin-bottom: 5%;
 	color: black;
 
 }
@@ -117,6 +125,7 @@
 	margin-bottom: 200px;
 	padding: 50px;
 	font-size: 20px;
+	
 
 }
 
@@ -167,23 +176,24 @@ video {
 /*Botao*/
 .btn-icon {
 	background-color: #808080;
- 	color: #FFF;
-     background-color: #808080;
-    border: none;
-    border-radius: 50%;
-    line-height: 30px;
-     padding: 15px 15px;
-    cursor: pointer;
+	color: #FFF;
+	background-color: #808080;
+	border: none;
+	border-radius: 50%;
+	line-height: 30px;
+	padding: 15px 15px;
+	cursor: pointer;
 
 
 }
+
 .button-container .btn-default {
-    margin-right: 8px;
+	margin-right: 8px;
 	margin-top: -29px;
 }
 
-.btn-icon:hover{
-	color:green;
+.btn-icon:hover {
+	color: green;
 }
 
 /*****************/
@@ -191,32 +201,43 @@ video {
 .imagem img {
 	width: 100%;
 	height: auto;
-	
+
 
 }
 
-.navbar-nav a:hover{
+.navbar-nav a:hover {
 	animation: bounce 1s;
-	
+
 }
+
 .circle {
-  background-color: #aaa;
-  border-radius: 50%;
-  width: 150px;
-  height: 150px;
-  overflow: hidden;
-  position: absolute;
-  margin-top: 15%;
-margin-left: 44%;
-	
-	
-	
+	background-color: #aaa;
+	border-radius: 50%;
+	width: 150px;
+	height: 150px;
+	overflow: hidden;
+	position: absolute;
+	margin-top: 15%;
+	margin-left: 44%;
+
+
+
 
 }
 
 .circle img {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+
+}
+
+/*	borda contato*/
+.borda {
+	-webkit-box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
+	-moz-box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
+	box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
 	
+	
+
 }
