--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ body {
 .videos {
 	display: flex;
 	justify-content: center;
-	margin-bottom: 150px;
+	    margin-bottom: -8px;
 
 
 }
@@ -170,6 +170,24 @@ video {
 	position: relative;
 
 
+}
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+
+#p a{
+	margin-bottom: 10%;
+}
+
+#titulo{
+	text-align: center; 
+	font-size: 35px;
+	margin-bottom: 50px; 
+	text-align: center;
+	padding-top: 25px;
+	font-family: 'Sree Krushnadevaraya', serif;
+	
 }
 
 
@@ -238,6 +256,8 @@ video {
 	-moz-box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
 	box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
 	
-	
 
 }
+
+
+
