--- a/css/style.css
+++ b/css/style.css
@@ -129,17 +129,50 @@
 
 }
 
+#tituloHabilidades{
+	text-align: center;
+	font-size: 35px;font-family:
+	'Sree Krushnadevaraya', serif;
+	padding-top:-60px;
+	padding-bottom:15px
+}
+
+
+#tituloSobre{
+	font-family: 'Sree Krushnadevaraya', serif;
+	font-size: 32px;
+}
+
+#tituloContato{
+	text-align: center; 
+	font-size: 35px;
+	margin-top: 2%; 
+	padding-top:15px;
+	margin-bottom: 15px;
+	font-family: 'Sree Krushnadevaraya', serif;
+}
+
 /*meu nome do inicio*/
 .text {
-	position: absolute;
-	font-size: 45px;
-	top: 55%;
-	font-weight: bolder;
-	color: white;
-	font-family: 'Sree Krushnadevaraya', serif;
-	text-align: center;
-	margin-left: 33%;
-
+	    position: inherit;
+    font-size: 45px;
+    top: 39%;
+    font-weight: bolder;
+    color: white;
+    font-family: 'Sree Krushnadevaraya', serif;
+    text-align: center;
+    margin-left: 5%;
+    margin-top: -14%;
+	
+}
+#txtMuted{
+	    font-size: 20px;
+    top: 60%;
+    font-weight: bolder;
+    color: white;
+    font-family: 'Sree Krushnadevaraya', serif;
+    text-align: center;
+    margin-left: 2%;;
 }
 
 
@@ -154,8 +187,8 @@ body {
 .videos {
 	display: flex;
 	justify-content: center;
-	    margin-bottom: -8px;
-
+	  margin-bottom: -8px;
+	
 
 }
 
@@ -163,31 +196,40 @@ video {
 	width: 100% !important;
 	height: auto !important;
 	height: 100%;
+	width: 100% !important;
+    height: auto !important;
+    height: 100%;
+    border-width: 6px;
+    border-style: double;
+    border-color: lightslategrey;
+
+}
+	 
+#p p{
+	    margin-left: 9px;
 }
 
 .box {
 	margin: 0px 0px 10px 10px;
 	position: relative;
-
-
+	margin-right: 70%;
 }
+
+
+
 .img-fluid {
     max-width: 100%;
     height: auto;
 }
 
-#p a{
-	margin-bottom: 10%;
-}
 
 #titulo{
-	text-align: center; 
-	font-size: 35px;
-	margin-bottom: 50px; 
+    font-size: 35px;
+    margin-bottom: 50px;
+    padding-top: 73px;
+    font-family: 'Sree Krushnadevaraya', serif;
 	text-align: center;
-	padding-top: 25px;
-	font-family: 'Sree Krushnadevaraya', serif;
-	
+	font-weight: bold;
 }
 
 
@@ -250,13 +292,46 @@ video {
 
 }
 
+#btn a{
+	padding: 15px 23px;
+	
+}
+
+
 /*	borda contato*/
 .borda {
 	-webkit-box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
 	-moz-box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
 	box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
+
+}
+.bordaProjetos{
+	-webkit-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
+	-moz-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
+	box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
+	padding: 25px;
+    padding-bottom: 10%;
+}
+
+
+@media (max-width: 775px) and (min-width: 200px) {
+	.text{
+		margin-top: -213px;
+	}
 	
 
+}
+@media (max-width: 571px) and (min-width: 200px) {
+	#btn a{
+		margin-top: -36%;
+	}
+	
+}
+@media (max-width: 1300px) and (min-width: 571px) {
+	#btn a{
+		margin-top: -23%;
+	}
+	
 }
 
 
