--- a/css/style.css
+++ b/css/style.css
@@ -125,54 +125,55 @@
 	margin-bottom: 200px;
 	padding: 50px;
 	font-size: 20px;
-	
+
 
 }
 
-#tituloHabilidades{
+#tituloHabilidades {
 	text-align: center;
-	font-size: 35px;font-family:
-	'Sree Krushnadevaraya', serif;
-	padding-top:-60px;
-	padding-bottom:15px
+	font-size: 35px;
+	font-family:
+		'Sree Krushnadevaraya', serif;
+	padding-top: -60px;
+	padding-bottom: 15px
 }
 
 
-#tituloSobre{
+#tituloSobre {
 	font-family: 'Sree Krushnadevaraya', serif;
 	font-size: 32px;
 }
 
-#tituloContato{
-	text-align: center; 
+#tituloContato {
+	text-align: center;
 	font-size: 35px;
-	margin-top: 2%; 
-	padding-top:15px;
+	margin-top: 2%;
+	padding-top: 15px;
 	margin-bottom: 15px;
 	font-family: 'Sree Krushnadevaraya', serif;
 }
 
 /*meu nome do inicio*/
 .text {
-	    position: inherit;
-    font-size: 45px;
-    top: 39%;
-    font-weight: bolder;
-    color: white;
-    font-family: 'Sree Krushnadevaraya', serif;
-    text-align: center;
-    margin-left: 5%;
-    margin-top: -14%;
-	
+	position: inherit;
+	font-size: 45px;
+	top: 39%;
+	font-weight: bolder;
+	color: white;
+	font-family: 'Sree Krushnadevaraya', serif;
+	text-align: center;
+	margin-top: -14%;
+
 }
-#txtMuted{
-	    font-size: 20px;
-    top: 60%;
-    font-weight: bolder;
-    color: white;
-    font-family: 'Sree Krushnadevaraya', serif;
-    text-align: center;
-    margin-left: 2%;;
+
+#txtMuted {
+	font-size: 20px;
+	top: 60%;
+	font-weight: bolder;
+	color: white;
+	font-family: 'Sree Krushnadevaraya', serif;
+	text-align: center;
+
 }
 
 
@@ -187,8 +188,8 @@ body {
 .videos {
 	display: flex;
 	justify-content: center;
-	  margin-bottom: -8px;
-	
+	margin-bottom: -8px;
+
 
 }
 
@@ -197,16 +198,16 @@ video {
 	height: auto !important;
 	height: 100%;
 	width: 100% !important;
-    height: auto !important;
-    height: 100%;
-    border-width: 6px;
-    border-style: double;
-    border-color: lightslategrey;
+	height: auto !important;
+	height: 100%;
+	border-width: 6px;
+	border-style: double;
+	border-color: lightslategrey;
 
 }
-	 
-#p p{
-	    margin-left: 9px;
+
+#p p {
+	margin-left: 9px;
 }
 
 .box {
@@ -218,16 +219,16 @@ video {
 
 
 .img-fluid {
-    max-width: 100%;
-    height: auto;
+	max-width: 100%;
+	height: auto;
 }
 
 
-#titulo{
-    font-size: 35px;
-    margin-bottom: 50px;
-    padding-top: 73px;
-    font-family: 'Sree Krushnadevaraya', serif;
+#titulo {
+	font-size: 35px;
+	margin-bottom: 50px;
+	padding-top: 73px;
+	font-family: 'Sree Krushnadevaraya', serif;
 	text-align: center;
 	font-weight: bold;
 }
@@ -292,9 +293,9 @@ video {
 
 }
 
-#btn a{
+#btn a {
 	padding: 15px 23px;
-	
+
 }
 
 
@@ -305,34 +306,34 @@ video {
 	box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
 
 }
-.bordaProjetos{
-	-webkit-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
-	-moz-box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
-	box-shadow: 0px 0px 10px -2px rgba(3,5,4,1);
+
+.bordaProjetos {
+	-webkit-box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
+	-moz-box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
+	box-shadow: 0px 0px 10px -2px rgba(3, 5, 4, 1);
 	padding: 25px;
-    padding-bottom: 10%;
+	padding-bottom: 10%;
 }
 
 
-@media (max-width: 775px) and (min-width: 200px) {
-	.text{
-		margin-top: -213px;
+@media (max-width: 900px) and (min-width: 300px) {
+	.text {
+		margin-top: -49px;
 	}
-	
 
-}
-@media (max-width: 571px) and (min-width: 200px) {
-	#btn a{
-		margin-top: -36%;
+
+	@media (max-width: 414px) and (min-width: 320px) {
+		#btn a {
+			margin-top: -54%;
+		}
+
 	}
-	
-}
-@media (max-width: 1300px) and (min-width: 571px) {
-	#btn a{
-		margin-top: -23%;
+
+	@media (max-width: 410px) and (min-width: 315px) {
+		.paragrafo {
+			    margin-top: 112%;
+    margin-left: -65%;
+		}
+
+
 	}
-	
-}
-
-
-
